src/components/data-table-v2/_data-table-v2-sort.scss
//
// Copyright IBM Corp. 2016, 2018
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
@import '../../globals/scss/vars';

@mixin data-table-v2-sort {
  .#{$prefix}--table-sort-v2--ascending {
    .#{$prefix}--table-sort-v2__icon {
      transform: rotate(180deg);
      transition: transform 200ms $carbon--standard-easing;
    }
  }

  .#{$prefix}--table-sort-v2--active {
    .#{$prefix}--table-sort-v2__icon {
      opacity: 1;
    }
  }

  .#{$prefix}--data-table-v2 th {
    &:hover {
      .#{$prefix}--table-sort-v2__icon {
        opacity: 1;
      }
    }
  }

  .#{$prefix}--table-sort-v2 {
    @include button-reset(false);
    position: relative;
    font: inherit;
    cursor: pointer;
    display: flex;
    align-items: center;
    width: 100%;
    color: $text-01;

    &:focus {
      outline: 0;

      svg {
        opacity: 1;
        outline: 1px solid $brand-01;
        fill: $brand-01;
        outline-offset: -0.5px; // safari fix
      }
    }
  }

  .#{$prefix}--table-sort-v2__icon {
    position: relative;
    left: 2px;
    transition: transform 200ms $carbon--standard-easing;
    transform: rotate(0);
    opacity: 0;
    fill: $ui-05;
    height: rem(9px);
    padding: $spacing-3xs;
    width: auto;
    min-width: 14px;
  }
}

@mixin data-table-v2-sort--x {
  // -------------------------------------
  // Sortable table
  // -------------------------------------

  .#{$prefix}--data-table-v2--sort th:hover {
    background: $data-table-column-hover;
    border-top: 1px solid $data-table-column-hover;
    border-bottom: 1px solid $data-table-column-hover;
  }

  .#{$prefix}--data-table-v2--sort th.#{$prefix}--table-column-icon:hover,
  .#{$prefix}--data-table-v2--sort th.#{$prefix}--table-column-menu:hover,
  .#{$prefix}--data-table-v2--sort th.#{$prefix}--table-expand-v2:hover {
    background: $ui-03;
    border-top: 1px solid $ui-03;
    border-bottom: 1px solid $ui-03;
  }

  .#{$prefix}--data-table-v2--sort th {
    padding: 0;
  }

  .#{$prefix}--data-table-v2--sort th.#{$prefix}--table-column-checkbox {
    padding: rem(10px) $spacing-05;
  }

  .#{$prefix}--data-table-v2--sort .#{$prefix}--table-header-label {
    max-width: 90%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  // -------------------------------------
  // Th > Button
  // -------------------------------------
  .#{$prefix}--table-sort-v2 {
    @include button-reset(false);
    position: relative;
    font: inherit;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    color: $text-01;
    padding: 0 $spacing-04;
    padding-right: rem(8px);
  }

  .#{$prefix}--table-sort-v2:focus {
    @include focus-outline('outline');
  }

  // changes opacity when th is inactive (see line 153)
  .#{$prefix}--table-sort-v2:focus svg,
  .#{$prefix}--table-sort-v2:hover svg {
    opacity: 1;
  }

  // -------------------------------------
  //Th > Button > Svg (Sort Icons)
  // -------------------------------------
  // inactive icons
  .#{$prefix}--table-sort-v2 .#{$prefix}--table-sort-v2__icon-inactive {
    display: block;
  }

  .#{$prefix}--table-sort-v2 .#{$prefix}--table-sort-v2__icon {
    display: none;
  }

  .#{$prefix}--table-sort-v2__icon-unsorted {
    position: relative;
    left: rem(2px);
    padding-left: rem(8px);
    padding-right: 0;
    opacity: 0;
    fill: $ui-05;
    height: $layout-01;
    width: auto;
  }

  // active icons
  .#{$prefix}--table-sort-v2.#{$prefix}--table-sort-v2--active .#{$prefix}--table-sort-v2__icon-unsorted {
    display: none;
  }

  .#{$prefix}--table-sort-v2.#{$prefix}--table-sort-v2--active .#{$prefix}--table-sort-v2__icon {
    display: block;
    opacity: 1; //changes opacity when th is active (see line 117)
  }

  .#{$prefix}--table-sort-v2--ascending .#{$prefix}--table-sort-v2__icon {
    transform: rotate(180deg);
    padding-right: rem(8px);
    padding-left: 0;
  }

  .#{$prefix}--table-sort-v2__icon {
    position: relative;
    left: rem(2px);
    padding-left: rem(8px);
    padding-right: 0;
    transition: transform $transition--base $carbon--standard-easing;
    transform: rotate(0);
    opacity: 0;
    fill: $ui-05;
    width: auto;
  }
}

@include exports('data-table-v2-sort') {
  @if feature-flag-enabled('components-x') {
    @include data-table-v2-sort--x;
  } @else {
    @include data-table-v2-sort;
  }
}

